--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,8 @@ set(CMAKE_CXX_STANDARD 23) # Enable the C++23 standard
 set(THREADS_PREFER_PTHREAD_FLAG ON)
 
 find_package(Threads REQUIRED)
+find_package(ZLIB REQUIRED)
 
 add_executable(server ${SOURCE_FILES})
 
-target_link_libraries(server PRIVATE Threads::Threads)
+target_link_libraries(server PRIVATE Threads::Threads ZLIB::ZLIB)
